# sentinel-live

./: .gitignore  README.md  render.yaml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/sentinel/: api.py  auth.py  call_handler.py  config.py  db.py  demo_runner.py  demo_vitals.py  enrollment.py  escalation.py  events.py  finalize.py  main.py  models.py  named_seed.py  outcomes.py  pairing.py  push.py  replay.py  scheduler.py  scoring.py  seed.py  summarization.py  vitals.py  watchdog.py  web_auth.py  webhooks.py
backend/tests/: conftest.py  test_alert_ack.py  test_api.py  test_call_handler.py  test_call_lifecycle.py  test_config.py  test_demo_runner.py  test_escalation.py  test_events.py  test_finalize.py  test_models.py  test_named_seed.py  test_open_alert_count.py  test_outcomes.py  test_pairing.py  test_push.py  test_replay.py  test_scoring.py  test_scoring_vitals.py  test_seed.py  test_summarization.py  test_summary_regenerate.py  test_vitals.py  test_watchdog.py  test_web_auth.py  test_webhook_post_call.py
docs/: RUNBOOK.md  backend-contract.md  curl-smoke.sh  elevenlabs-agent.md
frontend/: .env.local.example  package-lock.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: AlertFeed.tsx  ConvaiWidget.tsx  FinalizeButton.tsx  PatientCard.tsx  (+2 more)
mobile/: .env.example  .gitignore  HANDOFF.md  README.md  app.json  babel.config.js  eas.json  jest.setup.js  metro.config.js  package-lock.json  package.json
(+88 files in other folders)
